--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
     <link href="https://fonts.googleapis.com/css?family=Prompt:200,300,500,700" rel="stylesheet">
     <style>body{background:#fcfdff}</style>
     <script>window.prerenderReady = false</script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-144250473-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-144250473-1');
+</script>
+
   </head>
   <body>
     <div id="app"></div>
