--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   gtag('config', 'UA-144250473-1');
 </script>
 
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5d38d2742068f725"></script>
+
   </head>
   <body>
     <div id="app"></div>
