--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="msapplication-config" content="/static/icons/browserconfig.xml">
     <meta name="theme-color" content="#408c71">
+    <meta property="og:title" content="Example Page">
+<meta property="og:image" content="https://example.com/images/image.jpg">
+<meta property="og:description" content="This is just an example page.">
+<meta property="og:url" content="https://example.com/page.html">
+<meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/icons/favicon-16x16.png">
