--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
     <title>Vue Blog Cosmic JS</title>
-    <meta name="description" content=""/>
+    <meta name="description" content="The Cringepreneur blog seeks to follow the latest trends and tencencies from the business world and turn them into sattire"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="fragment" content="!"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="msapplication-config" content="/static/icons/browserconfig.xml">
     <meta name="theme-color" content="#408c71">
-    <meta property="og:title" content="Example Page">
-<meta property="og:image" content="https://example.com/images/image.jpg">
-<meta property="og:description" content="This is just an example page.">
-<meta property="og:url" content="https://example.com/page.html">
-<meta name="twitter:card" content="summary_large_image">
+    <meta property="og:title" content="Cringepreneur Blog">
+    <meta property="og:image" content="/static/icons/cringepreneur.jpg">
+    <meta property="og:description" content="">
+    <meta property="og:url" content="https://www.cringepreneur.com">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="apple-touch-icon" sizes="180x180" href="/static/icons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/static/icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/static/icons/favicon-16x16.png">
