--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8"/>
     <meta http-equiv="x-ua-compatible" content="ie=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    <title>Vue Blog Cosmic JS</title>
-    <meta name="description" content="The Cringepreneur blog seeks to follow the latest trends and tencencies from the business world and turn them into sattire"/>
+    <title>Welcom to the Cringepreneur Blog</title>
+    <meta name="description" content="The Cringepreneur blog follows the latest trends and tencencies in the world of business and entrepreneurcip and adds a healthy touch of cynicism and satire"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="fragment" content="!"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
